k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: online-shop-prod
  labels:
    environment: production


  DATABASE_NAME: "rds-database"
  CDD_VERSION: "10.2.0.4"
  AIS_VERSION: "10.4.0.0"
  SAP_VERSION: "10.0.0.0"
