k8s/ingress-nginx-values.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
    nodePort: 30080
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
    nodePort: 30443
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx


  DATABASE_NAME: "rds-database"
  CDD_VERSION: "10.2.0.4"
  AIS_VERSION: "10.4.0.0"
  SAP_VERSION: "10.0.0.0"
