k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: online-shop
  namespace: online-shop-prod
spec:
  selector:
    app: online-shop
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP


  DATABASE_NAME: "rds-database"
  CDD_VERSION: "10.2.0.4"
  AIS_VERSION: "10.4.0.0"
  SAP_VERSION: "10.0.0.0"

  #tum sbki mkc

  AIS: NA
  RCM: NA 
  ACTONE: NA 
  UDM: NA 
  IR:  NA 
  RCM_APP_sERVER: NA
